<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/board" />

    <EditText
        android:inputType="textNoSuggestions"
        android:id="@+id/gt_board"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_id" />

    <EditText
        android:id="@+id/gt_display_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:id="@+id/goto_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to" />

</LinearLayout>